<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/global_visa"
            android:layout_width="@dimen/select_destination_logo_image_width"
            android:layout_height="@dimen/select_destination_logo_image_height"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/language_text_margin_top"
                android:text="@string/home"
                android:textAllCaps="true"
                android:textSize="@dimen/topbar_text_size"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/language_text_margin_top"
                android:text="@string/check_visa_status"
                android:textAllCaps="true"
                android:textSize="@dimen/topbar_text_size"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/language_text_margin_top"
                android:text="@string/contact_us"
                android:textAllCaps="true"
                android:textSize="@dimen/topbar_text_size"
                android:textStyle="normal" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"></LinearLayout>

</LinearLayout>
